--- a/pokemonbean/resources_pk/rom/web/html/endround/positiontarget.html
+++ b/pokemonbean/resources_pk/rom/web/html/endround/positiontarget.html
@@ -17,7 +17,7 @@
 				<ul>
 					<c:for list="getMovesSameCategory()" var="m">
 						<li>
-							<a c:command="$clickTargetRelationMove({m;;})" href="">{getTrTargetRelationMove(m;;)}</a>
+							<a c:command="$clickTargetRelationMove({([m])})" href="">{getTrTargetRelationMove(([m]))}</a>
 						</li>
 					</c:for>
 				</ul>
