--- a/pokemonbean/resources_pk/rom/web/html/langs/langs.html
+++ b/pokemonbean/resources_pk/rom/web/html/langs/langs.html
@@ -12,16 +12,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysGenders()" var="k">
 					<tr>
-						<c:for list="getRowGender(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowGender(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -33,16 +33,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysBooleans()" var="k">
 					<tr>
-						<c:for list="getRowBoolean(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowBoolean(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -54,16 +54,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysEnvironments()" var="k">
 					<tr>
-						<c:for list="getRowEnvironment(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowEnvironment(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -75,16 +75,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysStatistics()" var="k">
 					<tr>
-						<c:for list="getRowStatistic(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowStatistic(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -96,16 +96,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysTargets()" var="k">
 					<tr>
-						<c:for list="getRowTarget(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowTarget(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -117,16 +117,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysCategories()" var="k">
 					<tr>
-						<c:for list="getRowCategory(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowCategory(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -138,16 +138,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysTypes()" var="k">
 					<tr>
-						<c:for list="getRowType(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowType(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -159,16 +159,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysPokemon()" var="k">
 					<tr>
-						<c:for list="getRowPokemon(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowPokemon(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -180,16 +180,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysMoves()" var="k">
 					<tr>
-						<c:for list="getRowMove(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowMove(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -201,16 +201,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysItems()" var="k">
 					<tr>
-						<c:for list="getRowItem(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowItem(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -222,16 +222,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysAbilities()" var="k">
 					<tr>
-						<c:for list="getRowAbility(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowAbility(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -243,16 +243,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysStatus()" var="k">
 					<tr>
-						<c:for list="getRowStatus(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowStatus(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -264,16 +264,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysMath()" var="k">
 					<tr>
-						<c:for list="getRowMath(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowMath(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
@@ -285,16 +285,16 @@
 			<thead>
 				<tr>
 					<c:for list="languages" var="l">
-						<th>{getTrLang(l;;)}</th>
+						<th>{getTrLang(([l]))}</th>
 					</c:for>
 				</tr>
 			</thead>
 			<tbody>
 				<c:for list="getKeysDesc()" var="k">
 					<tr>
-						<c:for list="getRowDesc(k;;)" var="s" className='java.lang.String'>
+						<c:for list="getRowDesc(([k]))" var="s" className='java.lang.String'>
 							<td>
-								{s;}
+								{s}
 							</td>
 						</c:for>
 					</tr>
