--- a/pokemonbean/resources_pk/rom/web/html/map/elements/trainer_multi_fight.html
+++ b/pokemonbean/resources_pk/rom/web/html/map/elements/trainer_multi_fight.html
@@ -17,12 +17,12 @@
 		<c:img src="{imageMini}"/>
 		<br/>
 		<c:for list="getTeamsRewards()" var="t" indexClassName="$int">
-			{t;;}<br/>
+			{([t])}<br/>
 			<c:import page="{pageTeam}">
 				<c:package name="aiki.beans.map.pokemon">
 					<c:class name="PokemonTeamBean">
 						<c:field prepare="$intern.trainer=trainer"/>
-						<c:field prepare="$intern.noFight=t;;"/>
+						<c:field prepare="$intern.noFight=([t])"/>
 					</c:class>
 				</c:package>
 			</c:import>
