--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effprotectfromtypes.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effprotectfromtypes.html
@@ -16,7 +16,7 @@
 			<c:message value="msg_effprotectfromtypes,immu_move_types"/>
 			<ul>
 				<c:for list="immuAgainstTypes" var="t">
-					<li>{getTrType(t;;)}</li>
+					<li>{getTrType(([t]))}</li>
 				</c:for>
 			</ul>
 		</p>
