--- a/pokemonbean/resources_pk/rom/web/html/moves/moves.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/moves.html
@@ -43,8 +43,8 @@
 					<c:import page="{movesBean}">
 						<c:package name="aiki.beans.moves">
 							<c:class name="MoveLineBean">
-								<c:field prepare="$intern.index=d;;"/>
-								<c:field prepare="$intern.moveLine=d;"/>
+								<c:field prepare="$intern.index=([d])"/>
+								<c:field prepare="$intern.moveLine=d"/>
 								<c:field prepare="$intern.sortedMoves=sortedMoves"/>
 							</c:class>
 						</c:package>
