--- a/pokemonbean/resources_pk/rom/web/html/sending/effsending.html
+++ b/pokemonbean/resources_pk/rom/web/html/sending/effsending.html
@@ -34,15 +34,15 @@
 						<c:message value="msg_eff,reasons"/>
 						<ul>
 							<c:for list="reasons" var="r" className='java.lang.String'>
-								<li>{r;}</li>
+								<li>{r}</li>
 							</c:for>
 						</ul>
 						<br/>
 						<ul>
 							<c:for key="c" map="mapVarsFail" value="r" keyClassName='java.lang.String' varClassName='java.lang.String'>
-								<li>{c;} :
+								<li>{c} :
 									<c:message quoted="" value="msg_eff,formula">
-										<param value="r;"/>
+										<param value="r"/>
 									</c:message>
 								</li>
 							</c:for>
@@ -83,10 +83,10 @@
 							<tbody>
 								<c:for key="c" map="statisVarRank" value="r" keyClassName='java.lang.String' varClassName='java.lang.Byte'>
 									<tr>
-										<td>{c;}</td>
-										<td>{r;}</td>
-										<td>{getFail(c;;)}</td>
-										<td>{getRate(c;;)}</td>
+										<td>{c}</td>
+										<td>{r}</td>
+										<td>{getFail(([c]))}</td>
+										<td>{getRate(([c]))}</td>
 									</tr>
 								</c:for>
 							</tbody>
@@ -111,9 +111,9 @@
 							<tbody>
 								<c:for key="c" map="statisVarRank" value="r" keyClassName='java.lang.String' varClassName='java.lang.Byte'>
 									<tr>
-										<td>{c;}</td>
-										<td>{r;}</td>
-										<td>{getFail(c;;)}</td>
+										<td>{c}</td>
+										<td>{r}</td>
+										<td>{getFail(([c]))}</td>
 									</tr>
 								</c:for>
 							</tbody>
@@ -123,9 +123,9 @@
 					<c:if condition="!mapVarsStatistics.isEmpty()">
 						<ul>
 							<c:for key="k" map="mapVarsStatistics" value="v" keyClassName='java.lang.String' varClassName='java.lang.String'>
-								<li>{k;} :
+								<li>{k} :
 									<c:message quoted="" value="msg_effstatis,formula">
-										<param value="v;"/>
+										<param value="v"/>
 									</c:message>
 								</li>
 							</c:for>
@@ -148,8 +148,8 @@
 						<tbody>
 							<c:for list="swapBoostStatis" var="c" className='java.lang.String'>
 								<tr>
-									<td>{c;}</td>
-									<td>{getSwapFail(c;;)}</td>
+									<td>{c}</td>
+									<td>{getSwapFail(([c]))}</td>
 								</tr>
 							</c:for>
 						</tbody>
@@ -158,9 +158,9 @@
 					<c:if condition="!mapVarsStatistics.isEmpty()">
 						<ul>
 							<c:for key="k" map="mapVarsStatistics" value="v" keyClassName='java.lang.String' varClassName='java.lang.String'>
-								<li>{k;} :
+								<li>{k} :
 									<c:message quoted="" value="msg_effstatis,formula">
-										<param value="v;"/>
+										<param value="v"/>
 									</c:message>
 								</li>
 							</c:for>
@@ -173,7 +173,7 @@
 					</c:message>
 					<ul>
 						<c:for list="cancelLowStat" var="s" className='java.lang.String'>
-							<li>{s;}</li>
+							<li>{s}</li>
 						</c:for>
 					</ul>
 					<br/>
@@ -184,7 +184,7 @@
 					</c:message>
 					<ul>
 						<c:for list="cancelChgtStat" var="s" className='java.lang.String'>
-							<li>{s;}</li>
+							<li>{s}</li>
 						</c:for>
 					</ul>
 					<br/>
@@ -195,7 +195,7 @@
 					</c:message>
 					<ul>
 						<c:for list="copyBoost" var="s" className='java.lang.String'>
-							<li>{s;}</li>
+							<li>{s}</li>
 						</c:for>
 					</ul>
 					<br/>
