--- a/pokemonbean/resources_pk/rom/web/html/combo/combos.html
+++ b/pokemonbean/resources_pk/rom/web/html/combo/combos.html
@@ -11,7 +11,7 @@
 				<c:package name="aiki.beans.effects">
 					<c:class name="EffectComboBean">
 						<c:field prepare="$intern.combos=combos"/>
-						<c:field prepare="$intern.index=m;;"/>
+						<c:field prepare="$intern.index=([m])"/>
 					</c:class>
 				</c:package>
 			</c:import>
