--- a/pokemonbean/resources_pk/rom/web/html/map/map.html
+++ b/pokemonbean/resources_pk/rom/web/html/map/map.html
@@ -8,18 +8,18 @@
 		<ul>
 			<c:for className="aiki.beans.facade.map.dto.PlaceIndex" list="places" var="p">
 				<li>
-					{p;getPlace().getName()}<br/>
-					<c:if condition="isMultiLayer(p;;)">
+					{p.getPlace().getName()}<br/>
+					<c:if condition="isMultiLayer(([p]))">
 						<ul>
-							<c:for list="layers(p;;)" var="l">
+							<c:for list="layers(([p]))" var="l">
 								<li>
-									<a c:command="$clickLevel({p;index},{l;;})">{l;;}</a>
+									<a c:command="$clickLevel({p.index},{([l])})">{([l])}</a>
 								</li>
 							</c:for>
 						</ul>
 					</c:if>
-					<c:if condition="!isMultiLayer(p;;)">
-						<a c:command="$clickLevel({p;index},0)"><c:message value="msg_levelmap,goLevel"/></a>
+					<c:if condition="!isMultiLayer(([p]))">
+						<a c:command="$clickLevel({p.index},0)"><c:message value="msg_levelmap,goLevel"/></a>
 					</c:if>
 				</li>
 			</c:for>
