--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effdamage.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effdamage.html
@@ -34,8 +34,8 @@
 					<tbody>
 						<c:for key="c" map="hitsLaw" value="r" keyClassName='java.lang.Long' varClassName='r'>
 							<tr>
-								<td>{c;}</td>
-								<td>{r;}</td>
+								<td>{c}</td>
+								<td>{r}</td>
 							</tr>
 						</c:for>
 					</tbody>
@@ -70,8 +70,8 @@
 							<tbody>
 								<c:for key="c" map="damageLaw" value="r" keyClassName='java.lang.String' varClassName='r'>
 									<tr>
-										<td>{c;}</td>
-										<td>{r;}</td>
+										<td>{c}</td>
+										<td>{r}</td>
 									</tr>
 								</c:for>
 							</tbody>
@@ -81,9 +81,9 @@
 					<c:if condition="!mapVarsDamage.isEmpty()">
 						<ul>
 							<c:for key="k" map="mapVarsDamage" value="v" keyClassName='java.lang.String' varClassName='java.lang.String'>
-								<li>{k;} :
+								<li>{k} :
 									<c:message quoted="" value="msg_effdamage,formula">
-										<param value="v;"/>
+										<param value="v"/>
 									</c:message>
 								</li>
 							</c:for>
@@ -107,8 +107,8 @@
 						<tbody>
 							<c:for key="c" map="multDamageAgainst" value="r" keyClassName='java.lang.String' varClassName='r'>
 								<tr>
-									<td>{c;}</td>
-									<td>{r;}</td>
+									<td>{c}</td>
+									<td>{r}</td>
 								</tr>
 							</c:for>
 						</tbody>
@@ -129,9 +129,9 @@
 					<c:if condition="!mapVarsDamage.isEmpty()">
 						<ul>
 							<c:for key="k" map="mapVarsDamage" value="v" keyClassName='java.lang.String' varClassName='java.lang.String'>
-								<li>{k;} :
+								<li>{k} :
 									<c:message quoted="" value="msg_effdamage,formula">
-										<param value="v;"/>
+										<param value="v"/>
 									</c:message>
 								</li>
 							</c:for>
@@ -156,8 +156,8 @@
 						<tbody>
 							<c:for key="c" map="chLaw" value="r" keyClassName='r' varClassName='r'>
 								<tr>
-									<td>{c;}</td>
-									<td>{r;}</td>
+									<td>{c}</td>
+									<td>{r}</td>
 								</tr>
 							</c:for>
 						</tbody>
@@ -187,7 +187,7 @@
 						<c:message value="msg_effdamage,ign_pos_stat"/>
 						<ul>
 							<c:for list="ignVarStatTargetPos" var="s">
-								<li>{getTranslatedStatisTarget(s;;)}</li>
+								<li>{getTranslatedStatisTarget(([s]))}</li>
 							</c:for>
 						</ul>
 						<br/>
@@ -196,7 +196,7 @@
 						<c:message value="msg_effdamage,ign_neg_stat"/>
 						<ul>
 							<c:for list="ignVarStatUserNeg" var="s">
-								<li>{getTranslatedStatisUser(s;;)}</li>
+								<li>{getTranslatedStatisUser(([s]))}</li>
 							</c:for>
 						</ul>
 						<br/>
@@ -223,8 +223,8 @@
 					<tbody>
 						<c:for key="c" map="boostStatisOnceKoFoe" value="r" varClassName='java.lang.Byte'>
 							<tr>
-								<td>{getTranslatedStatisKo(c;;)}</td>
-								<td>{r;}</td>
+								<td>{getTranslatedStatisKo(([c]))}</td>
+								<td>{r}</td>
 							</tr>
 						</c:for>
 					</tbody>
