--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effinvoke.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effinvoke.html
@@ -52,8 +52,8 @@
 					<tbody>
 						<c:for key="c" map="moveFctEnv" value="r">
 							<tr>
-								<td>{getTrEnv(c;;)}</td>
-								<td><a c:command="$clickMoveFctEnv({c;;})" href="">{getTrMoveFctEnv(c;;)}</a></td>
+								<td>{getTrEnv(([c]))}</td>
+								<td><a c:command="$clickMoveFctEnv({([c])})" href="">{getTrMoveFctEnv(([c]))}</a></td>
 							</tr>
 						</c:for>
 					</tbody>
@@ -63,7 +63,7 @@
 					<c:message value="msg_effinvoke,move_fct_env_exc"/>
 					<ul>
 						<c:for list="globalMoves" var="m">
-							<li><a c:command="$clickGlobalMoveFctEnv({m;;})" href="">{getTrGlobalMoveFctEnv(m;;)}</a></li>
+							<li><a c:command="$clickGlobalMoveFctEnv({([m])})" href="">{getTrGlobalMoveFctEnv(([m]))}</a></li>
 						</c:for>
 					</ul>
 					<br/>
@@ -85,13 +85,13 @@
 					<tbody>
 						<c:for key="c" map="invokingMoveByUserTypes" value="r">
 							<tr>
-								<c:if condition="!isType(c;;)">
+								<c:if condition="!isType(([c]))">
 									<td><c:message value="msg_effinvoke,other_owned_type"/></td>
 								</c:if>
-								<c:if condition="isType(c;;)">
-									<td>{getTrUserTypes(c;;)}</td>
+								<c:if condition="isType(([c]))">
+									<td>{getTrUserTypes(([c]))}</td>
 								</c:if>
-								<td><a c:command="$clickMoveUserTypes({c;;})" href="">{getTrMoveUserTypes(c;;)}</a></td>
+								<td><a c:command="$clickMoveUserTypes({([c])})" href="">{getTrMoveUserTypes(([c]))}</a></td>
 							</tr>
 						</c:for>
 					</tbody>
@@ -102,7 +102,7 @@
 				<c:message value="msg_effinvoke,moves_not_invoked"/>
 				<ul>
 					<c:for list="movesNotToBeInvoked" var="s">
-						<li><a c:command="$clickMoveNotInvok({s;;})" href="">{getTrMoveNotInvok(s;;)}</a></li>
+						<li><a c:command="$clickMoveNotInvok({([s])})" href="">{getTrMoveNotInvok(([s]))}</a></li>
 					</c:for>
 				</ul>
 				<br/>
