--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effmultusedmovepower.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effmultusedmovepower.html
@@ -24,8 +24,8 @@
 				<tbody>
 					<c:for key="t" map="multMovePowerFctType" value="r" varClassName='r'>
 						<tr>
-							<td>{getTrType(t;;)}</td>
-							<td>{r;}</td>
+							<td>{getTrType(([t]))}</td>
+							<td>{r}</td>
 						</tr>
 					</c:for>
 				</tbody>
