--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effunprotectfromtypes.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effunprotectfromtypes.html
@@ -25,8 +25,8 @@
 					<tbody>
 						<c:for list="types" var="d">
 							<tr>
-								<td>{getTrDamageType(d;;)}</td>
-								<td>{getTrPokemonType(d;;)}</td>
+								<td>{getTrDamageType(([d]))}</td>
+								<td>{getTrPokemonType(([d]))}</td>
 							</tr>
 						</c:for>
 					</tbody>
@@ -37,7 +37,7 @@
 				<c:message value="msg_effunprotectfromtypes,disable_immu_types"/>
 				<ul>
 					<c:for list="disableImmuAgainstTypes" var="t">
-						<li>{getTrDisableImmuType(t;;)}</li>
+						<li>{getTrDisableImmuType(([t]))}</li>
 					</c:for>
 				</ul>
 				<br/>
@@ -46,7 +46,7 @@
 				<c:message value="msg_effunprotectfromtypes,disable_immu_from_moves"/>
 				<ul>
 					<c:for list="disableImmuFromMoves" var="t">
-						<li><a c:command="$clickMove({index},{t;;})" href="">{getTrDisableImmuMove(t;;)}</a></li>
+						<li><a c:command="$clickMove({index},{([t])})" href="">{getTrDisableImmuMove(([t]))}</a></li>
 					</c:for>
 				</ul>
 				<br/>
@@ -55,7 +55,7 @@
 				<c:message value="msg_effunprotectfromtypes,attack_target_types"/>
 				<ul>
 					<c:for list="attackTargetWithTypes" var="t">
-						<li>{getTrAttackTargetType(t;;)}</li>
+						<li>{getTrAttackTargetType(([t]))}</li>
 					</c:for>
 				</ul>
 				<br/>
