--- a/pokemonbean/resources_pk/rom/web/html/simulation/selectpokemon.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/selectpokemon.html
@@ -34,14 +34,14 @@
 			<tbody>
 				<c:for className="aiki.beans.facade.dto.PokemonLine" list="pokedex" var="d">
 					<tr>
-						<td><c:img src="{getMiniImage(d;;)}"/></td>
-						<td><a c:command="$clickLink({d;;})" href="">{d;displayName}</a></td>
+						<td><c:img src="{getMiniImage(([d]))}"/></td>
+						<td><a c:command="$clickLink({([d])})" href="">{d.displayName}</a></td>
 						<td>
-							<c:for list="d;types" var="t" className='java.lang.String'>
-								{t;} -
+							<c:for list="d.types" var="t" className='java.lang.String'>
+								{t} -
 							</c:for>
 						</td>
-						<td>{d;evolutions}</td>
+						<td>{d.evolutions}</td>
 					</tr>
 				</c:for>
 			</tbody>
