--- a/pokemonbean/resources_pk/rom/web/html/solution/solution.html
+++ b/pokemonbean/resources_pk/rom/web/html/solution/solution.html
@@ -6,11 +6,11 @@
 	<body>
 		<a c:command="web/html/index.html" href=""><c:message value="msg_solution,index"/></a>
 		<c:for className="aiki.beans.facade.solution.dto.StepDto" list="steps" var="s">
-			{s;;}<br/>
+			{([s])}<br/>
 			<p>
-				<c:for key="i" map="s;getPokemon()" value="g" varClassName="ls">
+				<c:for key="i" map="s.getPokemon()" value="g" varClassName="ls">
 					<table>
-						<caption><b>{getPlace(s;;,i;;)}</b></caption>
+						<caption><b>{getPlace(([s]),([i]))}</b></caption>
 						<thead>
 							<tr>
 								<th><c:message value="msg_solution,image"/></th>
@@ -19,20 +19,20 @@
 							</tr>
 						</thead>
 						<tbody>
-							<c:for className="aiki.beans.facade.solution.dto.WildPokemonDto" list="g;" var="l">
+							<c:for className="aiki.beans.facade.solution.dto.WildPokemonDto" list="g" var="l">
 								<tr>
-									<td><c:img src="{l;image}"/></td>
-									<td>{l;name}</td>
-									<td>{l;gender}</td>
+									<td><c:img src="{l.image}"/></td>
+									<td>{l.name}</td>
+									<td>{l.gender}</td>
 								</tr>
 							</c:for>
 						</tbody>
 					</table>
 				</c:for>
-				<c:if condition="!s;getNames().isEmpty()">
+				<c:if condition="!s.getNames().isEmpty()">
 					<ul>
-						<c:for className="aiki.beans.facade.solution.dto.PlaceTrainerDto" list="s;getNames()" var="i">
-							<li>{i;trainer} - {i;place}</li>
+						<c:for className="aiki.beans.facade.solution.dto.PlaceTrainerDto" list="s.getNames()" var="i">
+							<li>{i.trainer} - {i.place}</li>
 						</c:for>
 					</ul>
 				</c:if>
