--- a/pokemonbean/resources_pk/rom/web_fight/html/fightdetail.html
+++ b/pokemonbean/resources_pk/rom/web_fight/html/fightdetail.html
@@ -10,17 +10,17 @@
 			<c:message value="msg_fight,sorted_fighters_fct_choices"/>
 			<ul>
 				<c:for list="sortedFighters" var="f">
-					<li>{getFighter(f;;)}</li>
+					<li>{getFighter(([f]))}</li>
 				</c:for>
 			</ul>
 		</c:if>
 		<c:if condition="!sortedFightersWildFight.isEmpty()">
 			<c:message value="msg_fight,sorted_fighters_fct_choices_wild"/>
 			<c:for key="m" map="sortedFightersWildFight" value="f" keyClassName='java.lang.String' varClassName="ls">
-				{m;}<br/>
+				{m}<br/>
 				<ul>
-					<c:for list="f;" var="p">
-						<li>{getFighterWildFight(m;;,p;;)}</li>
+					<c:for list="f" var="p">
+						<li>{getFighterWildFight(([m]),([p]))}</li>
 					</c:for>
 				</ul>
 			</c:for>
@@ -38,19 +38,19 @@
 			<tbody>
 				<c:for className="aiki.beans.facade.fight.KeyHypothesis" list="damage" var="d">
 					<tr>
-						<td>{d;getPlayerPokemon()}</td>
-						<td>{d;getMove()}</td>
+						<td>{d.getPlayerPokemon()}</td>
+						<td>{d.getMove()}</td>
 						<td>
-							{d;getTargetPokemon()}
-							<c:if condition="d;isBelongsToUser()">
+							{d.getTargetPokemon()}
+							<c:if condition="d.isBelongsToUser()">
 								<c:message value="msg_fight,damage_fct_choices_player"/>
 							</c:if>
-							<c:if condition="!d;isBelongsToUser()">
+							<c:if condition="!d.isBelongsToUser()">
 								<c:message value="msg_fight,damage_fct_choices_foe"/>
 							</c:if>
-							 {d;getNumberTarget()}
+							 {d.getNumberTarget()}
 						</td>
-						<td>{d;getDamage()}</td>
+						<td>{d.getDamage()}</td>
 					</tr>
 				</c:for>
 			</tbody>
@@ -73,33 +73,33 @@
 				<tbody>
 					<c:for key="m" keyClassName="aiki.game.fight.util.MoveTarget" map="allyChoice" value="a" varClassName="aiki.game.fight.util.MoveTarget">
 						<tr>
-							<td>{m;getMove()}</td>
-							<c:if condition="isFoeTargetChoiceTeam(m;;)">
+							<td>{m.getMove()}</td>
+							<c:if condition="isFoeTargetChoiceTeam(([m]))">
 								<td><c:message value="msg_fight,ally_choices_foe"/></td>
 							</c:if>
-							<c:if condition="!isFoeTargetChoiceTeam(m;;)">
+							<c:if condition="!isFoeTargetChoiceTeam(([m]))">
 								<td><c:message value="msg_fight,ally_choices_player"/></td>
 							</c:if>
-							<c:if condition="!isBackTargetChoiceTeam(m;;)">
-								<td>{m;getTarget().getPosition()}</td>
-								<td>{getTargetNameAllyChoiceCondition(m;;)}</td>
+							<c:if condition="!isBackTargetChoiceTeam(([m]))">
+								<td>{m.getTarget().getPosition()}</td>
+								<td>{getTargetNameAllyChoiceCondition(([m]))}</td>
 							</c:if>
-							<c:if condition="isBackTargetChoiceTeam(m;;)">
+							<c:if condition="isBackTargetChoiceTeam(([m]))">
 								<td><c:message value="msg_fight,ally_choices_no"/></td>
 								<td><c:message value="msg_fight,ally_choices_no"/></td>
 							</c:if>
-							<td>{a;getMove()}</td>
-							<c:if condition="isFoeTargetTeam(m;;)">
+							<td>{a.getMove()}</td>
+							<c:if condition="isFoeTargetTeam(([m]))">
 								<td><c:message value="msg_fight,ally_choices_foe"/></td>
 							</c:if>
-							<c:if condition="!isFoeTargetTeam(m;;)">
+							<c:if condition="!isFoeTargetTeam(([m]))">
 								<td><c:message value="msg_fight,ally_choices_player"/></td>
 							</c:if>
-							<c:if condition="!isBackTargetTeam(m;;)">
-								<td>{a;getTarget().getPosition()}</td>
-								<td>{getTargetNameAllyChoice(m;;)}</td>
+							<c:if condition="!isBackTargetTeam(([m]))">
+								<td>{a.getTarget().getPosition()}</td>
+								<td>{getTargetNameAllyChoice(([m]))}</td>
 							</c:if>
-							<c:if condition="isBackTargetTeam(m;;)">
+							<c:if condition="isBackTargetTeam(([m]))">
 								<td><c:message value="msg_fight,ally_choices_no"/></td>
 								<td><c:message value="msg_fight,ally_choices_no"/></td>
 							</c:if>
@@ -124,20 +124,20 @@
 				<tbody>
 					<c:for key="p" map="foeChoices" value="a" keyClassName='java.lang.Byte' varClassName="aiki.game.fight.util.MoveTarget">
 						<tr>
-							<td>{p;}</td>
-							<td>{getFoeFighterName(p;;)}</td>
-							<td>{a;getMove()}</td>
-							<c:if condition="isChosenTarget(p;;)">
-								<c:if condition="isFoeTargetChTeam(p;;)">
+							<td>{p}</td>
+							<td>{getFoeFighterName(([p]))}</td>
+							<td>{a.getMove()}</td>
+							<c:if condition="isChosenTarget(([p]))">
+								<c:if condition="isFoeTargetChTeam(([p]))">
 									<td><c:message value="msg_fight,foe_choices_foe"/></td>
 								</c:if>
-								<c:if condition="!isFoeTargetChTeam(p;;)">
+								<c:if condition="!isFoeTargetChTeam(([p]))">
 									<td><c:message value="msg_fight,foe_choices_player"/></td>
 								</c:if>
-								<td>{a;getTarget().getPosition()}</td>
-								<td>{getTargetNameFoeChoice(p;;)}</td>
+								<td>{a.getTarget().getPosition()}</td>
+								<td>{getTargetNameFoeChoice(([p]))}</td>
 							</c:if>
-							<c:if condition="!isChosenTarget(p;;)">
+							<c:if condition="!isChosenTarget(([p]))">
 								<td><c:message value="msg_fight,foe_choices_no"/></td>
 								<td><c:message value="msg_fight,foe_choices_no"/></td>
 								<td><c:message value="msg_fight,foe_choices_no"/></td>
