--- a/pokemonbean/resources_pk/rom/web_fight/html/team.html
+++ b/pokemonbean/resources_pk/rom/web_fight/html/team.html
@@ -15,7 +15,7 @@
 		<a c:command="web_fight/html/team.html"><c:message value="msg_team,refresh"/></a><br/>
 		<ul>
 			<c:for list="getMembers()" var="f" className="java.lang.Byte">
-				<li><a c:command="$clickFighter({f;})">{getTrPokemonLink(f;;)}</a></li>
+				<li><a c:command="$clickFighter({f})">{getTrPokemonLink(([f]))}</a></li>
 			</c:for>
 		</ul>
 		<c:message value="msg_team,enbaled_moves"/>
@@ -30,17 +30,17 @@
 			<tbody>
 				<c:for key="m" map="enabledMoves" value="a" keyClassName='java.lang.String' varClassName="aiki.game.fight.ActivityOfMove">
 					<tr>
-						<td>{m;}</td>
-						<c:if condition="a;isEnabled()">
+						<td>{m}</td>
+						<c:if condition="a.isEnabled()">
 							<td><c:message value="msg_team,enbaled_moves_enabled_y"/></td>
 						</c:if>
-						<c:if condition="!a;isEnabled()">
+						<c:if condition="!a.isEnabled()">
 							<td><c:message value="msg_team,enbaled_moves_enabled_n"/></td>
 						</c:if>
-						<c:if condition="a;isIncrementCount()">
-							<td>{a;getNbTurn()}</td>
+						<c:if condition="a.isIncrementCount()">
+							<td>{a.getNbTurn()}</td>
 						</c:if>
-						<c:if condition="!a;isIncrementCount()">
+						<c:if condition="!a.isIncrementCount()">
 							<td><c:message value="msg_team,enbaled_moves_no"/></td>
 						</c:if>
 					</tr>
@@ -59,17 +59,17 @@
 			<tbody>
 				<c:for key="m" map="enabledMovesByGroup" value="a" varClassName="aiki.game.fight.ActivityOfMove">
 					<tr>
-						<td>{getKey(m;;)}</td>
-						<c:if condition="a;isEnabled()">
+						<td>{getKey(([m]))}</td>
+						<c:if condition="a.isEnabled()">
 							<td><c:message value="msg_team,enbaled_moves_groups_enabled_y"/></td>
 						</c:if>
-						<c:if condition="!a;isEnabled()">
+						<c:if condition="!a.isEnabled()">
 							<td><c:message value="msg_team,enbaled_moves_groups_enabled_n"/></td>
 						</c:if>
-						<c:if condition="a;isIncrementCount()">
-							<td>{a;getNbTurn()}</td>
+						<c:if condition="a.isIncrementCount()">
+							<td>{a.getNbTurn()}</td>
 						</c:if>
-						<c:if condition="!a;isIncrementCount()">
+						<c:if condition="!a.isIncrementCount()">
 							<td><c:message value="msg_team,enbaled_moves_groups_no"/></td>
 						</c:if>
 					</tr>
@@ -87,8 +87,8 @@
 			<tbody>
 				<c:for key="m" map="enabledMovesWhileSendingFoeUses" value="u" keyClassName='java.lang.String' varClassName='li'>
 					<tr>
-						<td>{m;}</td>
-						<td>{u;}</td>
+						<td>{m}</td>
+						<td>{u}</td>
 					</tr>
 				</c:for>
 			</tbody>
@@ -104,8 +104,8 @@
 			<tbody>
 				<c:for key="m" map="nbUsesMoves" value="u" keyClassName='java.lang.String' varClassName='java.lang.Integer'>
 					<tr>
-						<td>{m;}</td>
-						<td>{u;}</td>
+						<td>{m}</td>
+						<td>{u}</td>
 					</tr>
 				</c:for>
 			</tbody>
@@ -123,21 +123,21 @@
 			</thead>
 			<tbody>
 				<c:for key="m" map="healAfter" value="u" keyClassName='java.lang.String' varClassName="lse">
-					<c:for key="p" map="u;" value="s" keyClassName='java.lang.Byte' varClassName="aiki.game.fight.StacksOfUses">
+					<c:for key="p" map="u" value="s" keyClassName='java.lang.Byte' varClassName="aiki.game.fight.StacksOfUses">
 						<tr>
-							<td>{m;}</td>
-							<td>{p;}</td>
-							<td>{s;getNbRounds()}</td>
-							<c:if condition="s;isFirstStacked()">
+							<td>{m}</td>
+							<td>{p}</td>
+							<td>{s.getNbRounds()}</td>
+							<c:if condition="s.isFirstStacked()">
 								<td><c:message value="msg_team,heal_after_y"/></td>
 							</c:if>
-							<c:if condition="!s;isFirstStacked()">
+							<c:if condition="!s.isFirstStacked()">
 								<td><c:message value="msg_team,heal_after_n"/></td>
 							</c:if>
-							<c:if condition="s;isLastStacked()">
+							<c:if condition="s.isLastStacked()">
 								<td><c:message value="msg_team,heal_after_y"/></td>
 							</c:if>
-							<c:if condition="!s;isLastStacked()">
+							<c:if condition="!s.isLastStacked()">
 								<td><c:message value="msg_team,heal_after_n"/></td>
 							</c:if>
 						</tr>
@@ -159,27 +159,27 @@
 			</thead>
 			<tbody>
 				<c:for key="m" map="movesAnticipation" value="u" keyClassName='java.lang.String' varClassName="lse">
-					<c:for key="p" map="u;" value="s" keyClassName='java.lang.Byte' varClassName="aiki.game.fight.Anticipation">
+					<c:for key="p" map="u" value="s" keyClassName='java.lang.Byte' varClassName="aiki.game.fight.Anticipation">
 						<tr>
-							<td>{m;}</td>
-							<td>{p;}</td>
-							<c:if condition="isFoeMovesAnticipationTeam(m;;,p;;)">
+							<td>{m}</td>
+							<td>{p}</td>
+							<c:if condition="isFoeMovesAnticipationTeam(([m]),([p]))">
 								<td><c:message value="msg_team,move_ant_foe"/></td>
 							</c:if>
-							<c:if condition="!isFoeMovesAnticipationTeam(m;;,p;;)">
+							<c:if condition="!isFoeMovesAnticipationTeam(([m]),([p]))">
 								<td><c:message value="msg_team,move_ant_player"/></td>
 							</c:if>
-							<c:if condition="!isBackMovesAnticipationTeam(m;;,p;;)">
-								<td>{s;getTargetPosition().getPosition()}</td>
+							<c:if condition="!isBackMovesAnticipationTeam(([m]),([p]))">
+								<td>{s.getTargetPosition().getPosition()}</td>
 							</c:if>
-							<c:if condition="isBackMovesAnticipationTeam(m;;,p;;)">
+							<c:if condition="isBackMovesAnticipationTeam(([m]),([p]))">
 								<td><c:message value="msg_team,move_ant_no"/></td>
 							</c:if>
-							<td>{s;getDamage()}</td>
-							<c:if condition="s;isIncrementing()">
-								<td>{s;getNbRounds()}</td>
+							<td>{s.getDamage()}</td>
+							<c:if condition="s.isIncrementing()">
+								<td>{s.getNbRounds()}</td>
 							</c:if>
-							<c:if condition="!s;isIncrementing()">
+							<c:if condition="!s.isIncrementing()">
 								<td><c:message value="msg_team,move_ant_no"/></td>
 							</c:if>
 						</tr>
@@ -192,12 +192,12 @@
 			<ul>
 				<c:for key="p" map="playerFightersAgainstFoe" value="f" varClassName="ls">
 					<li>
-						{getPlayerFigtherAgainstFoe(p;;)}:<br/>
-						<c:if condition="!f;isEmpty()">
+						{getPlayerFigtherAgainstFoe(([p]))}:<br/>
+						<c:if condition="!f.isEmpty()">
 							<ul>
-								<c:for list="f;" var="c">
+								<c:for list="f" var="c">
 									<li>
-										{getFoeFigtherAgainstFoe(p;;,c;;)}
+										{getFoeFigtherAgainstFoe(([p]),([c]))}
 									</li>
 								</c:for>
 							</ul>
