--- a/pokemonbean/resources_pk/rom/web_prog/html/gameprogpart.html
+++ b/pokemonbean/resources_pk/rom/web_prog/html/gameprogpart.html
@@ -6,18 +6,18 @@
 	<body>
 		<a c:command="web_prog/html/gameprog.html"><c:message value="msg_prog,returnMain"/></a><br/>
 		<c:for key="k" map="partialFamiliesBaseNotCaught" value="m" keyClassName='java.lang.String' varClassName="ls">
-			{k;}<br/>
+			{k}<br/>
 			<table>
 				<tbody>
 					<tr>
 						<td>
 							<c:message value="msg_prog,notCaughtPkCaughtNotPart"/>
 						</td>
-						<c:for className="ls" list="m;" var="l">
+						<c:for className="ls" list="m" var="l">
 							<td>
-								<c:for list="l;" var="e">
-									<c:img src="{getImagePokemonPartialNot(k;;,l;;,e;;)}"/>
-									{getTrPokemonPartialNot(k;;,l;;,e;;)}<br/>
+								<c:for list="l" var="e">
+									<c:img src="{getImagePokemonPartialNot(([k]),([l]),([e]))}"/>
+									{getTrPokemonPartialNot(([k]),([l]),([e]))}<br/>
 								</c:for>
 							</td>
 						</c:for>
@@ -26,11 +26,11 @@
 						<td>
 							<c:message value="msg_prog,notCaughtPkCaughtPart"/>
 						</td>
-						<c:for className="ls" list="m;" var="l">
+						<c:for className="ls" list="m" var="l">
 							<td>
-								<c:for list="getKeyPokemon(k;;,l;;)" var="e">
-									<c:img src="{getImagePokemonPartial(k;;,l;;,e;;)}"/>
-									{getTrPokemonPartial(k;;,l;;,e;;)}<br/>
+								<c:for list="getKeyPokemon(([k]),([l]))" var="e">
+									<c:img src="{getImagePokemonPartial(([k]),([l]),([e]))}"/>
+									{getTrPokemonPartial(([k]),([l]),([e]))}<br/>
 								</c:for>
 							</td>
 						</c:for>
